# Spin_Chain

./: .gitignore  CMakeLists.txt  README.md  python_test.ipynb  setup.py  spin_chain.pyx
include/: Library.hpp  Solver.hpp  Spin_Chain.hpp
source/: Library.cpp  Solver.cpp  Spin_chain.cpp
